Adding Facility category into API
